# django-react-project

./: .gitignore  Makefile  README.md  subject.txt
client/: .gitignore  Dockerfile  components.json  package-lock.json  package.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/components/competition/: CompetitionListItem.tsx  MatchListDisplay.tsx
client/src/components/forms/: StyledBetFormRenderer.tsx  StyledDjangoFormRenderer.tsx
client/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
server/: .gitignore  Dockerfile  manage.py  pyproject.toml
server/django_bridge_project/: admin.py  apps.py  forms.py  models.py  settings.py  signals.py  urls.py  views.py
server/django_bridge_project/controllers/: auth_controller.py  competition_controller.py  match_controller.py  team_controller.py
server/django_bridge_project/controllers/utils/: __init__.py  competition_data_helper.py  home_data_helper.py  match_data_helper.py  team_data_helper.py  user_bet_data_helper.py
server/django_bridge_project/enums/: prediction_types.py
server/django_bridge_project/forms/: __init__.py  auth.py
server/django_bridge_project/forms/utils/: __init__.py  bet_form_utils.py
server/django_bridge_project/middleware/: auth_redirect_middleware.py
server/django_bridge_project/migrations/: 0001_initial.py  0002_match_is_winner_needed_and_more.py  0003_bet_winner_team.py  0004_match_points_calculation_done.py
server/django_bridge_project/services/: points_attribution_helper.py
server/django_bridge_project/validators/: image_validators.py
(+40 files in other folders)
