[tool.poetry]
name = "django_bridge_project"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "django_bridge_project" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
django = "^5.1"
django-bridge = "^0.4"
psycopg = "^3.2.5"
dj-database-url = "^2.3.0"
gunicorn = "^23.0.0"
Pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
